--- a/BallScrewVCP1.ui
+++ b/BallScrewVCP1.ui
@@ -120,6 +120,9 @@ font: 15pt bold;</string>
           </item>
           <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
            <widget class="PushButton" name="btnLog_Trigger31">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -166,9 +169,12 @@ font: 15pt bold;</string>
           </item>
           <item>
            <widget class="PushButton" name="btnJog_Minus31">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/caret_left.png</normaloff>:/resources/caret_left.png</iconset>
+             <iconset>
+              <normaloff>resources/caret_left.png</normaloff>resources/caret_left.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -180,9 +186,12 @@ font: 15pt bold;</string>
           </item>
           <item>
            <widget class="PushButton" name="btnJog_Plus31">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/caret_right.png</normaloff>:/resources/caret_right.png</iconset>
+             <iconset>
+              <normaloff>resources/caret_right.png</normaloff>resources/caret_right.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -281,8 +290,8 @@ font: 15pt bold;</string>
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/vertical_line.png</normaloff>:/resources/vertical_line.png</iconset>
+             <iconset>
+              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -307,9 +316,8 @@ font: 15pt bold;</string>
              <string notr="true">background-color: rgb(239, 41, 41);</string>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/circle.png</normaloff>
-              <selectedon>:/resources/circle.png</selectedon>:/resources/circle.png</iconset>
+             <iconset>
+              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -318,6 +326,25 @@ font: 15pt bold;</string>
              </size>
             </property>
             <property name="machine_on_action" stdset="0">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="ActionButton" name="actionbutton">
+            <property name="text">
+             <string>E Stop</string>
+            </property>
+            <property name="indicator_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="indicator_status_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="is_estopped_status" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="estop_action" stdset="0">
              <bool>true</bool>
             </property>
            </widget>
@@ -375,27 +402,6 @@ font: 15pt bold;</string>
     </item>
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <widget class="ActionButton" name="actionbutton">
-        <property name="text">
-         <string>Тестовая
-кнопка
-Machine on</string>
-        </property>
-        <property name="indicator_option" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="indicator_status_option" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="is_estopped_status" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="estop_action" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
@@ -494,9 +500,7 @@ append_file</string>
    <header>qtvcp.widgets.action_button</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="BallScrewVCP.qrc"/>
- </resources>
+ <resources/>
  <connections/>
  <slots>
   <slot>onBtnTempShow34()</slot>
