--- a/BallScrewVCP2.ui
+++ b/BallScrewVCP2.ui
@@ -38,6 +38,92 @@ qproperty-diameter: 20;
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QWidget" name="widget" native="true">
+      <property name="styleSheet">
+       <string notr="true">#widget {
+background-image: url(./resources/stripes.png);
+}</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="3" column="0">
+        <widget class="PushButton" name="btnAppend_Title32">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>test
+append_title</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="PushButton" name="btnAppend_Buffer32">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>test
+append_buffer</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="PushButton" name="btnAppend_File32">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>test
+append_file</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="4" column="0">
+        <widget class="PushButton" name="btnTestDir">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>test
+dir</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+         </property>
+         <property name="text">
+          <string>Для тестов</string>
+         </property>
+         <property name="margin">
+          <number>5</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="0" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
@@ -887,83 +973,6 @@ font: 15pt bold;</string>
        </layout>
       </widget>
      </widget>
-    </item>
-    <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnAppend_Buffer32">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>test
-append_buffer</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnAppend_File32">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>test
-append_file</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnAppend_Title32">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>test
-append_title</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestDir">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>test
-dir</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
     </item>
    </layout>
   </widget>
