--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -38,6 +38,126 @@ qproperty-diameter: 20;
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QWidget" name="widget" native="true">
+      <property name="styleSheet">
+       <string notr="true">#widget {
+background-image: url(./resources/stripes.png);
+}</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="5" column="0">
+        <widget class="PushButton" name="btnTestActive4">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_4</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="PushButton" name="btnTestActive5">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_5</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="PushButton" name="btnTestActive0">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_0</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="checked_state_text_option" stdset="0">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="PushButton" name="btnTestActive1">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_1</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="PushButton" name="btnTestActive2">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_2</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="PushButton" name="btnTestActive3">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_3</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+         </property>
+         <property name="text">
+          <string>Для тестов</string>
+         </property>
+         <property name="margin">
+          <number>5</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="0" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
@@ -372,10 +492,10 @@ qproperty-flashRate: 200;</string>
         </item>
         <item row="5" column="2">
          <layout class="QGridLayout" name="gridLayout_23">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_74">
+          <item row="0" column="2">
+           <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>Номер цикла</string>
+             <string>из</string>
             </property>
            </widget>
           </item>
@@ -387,14 +507,28 @@ qproperty-flashRate: 200;</string>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLabel" name="label_22">
+           <widget class="QLabel" name="lblI34">
             <property name="text">
              <string>---</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_74">
+            <property name="text">
+             <string>Номер цикла</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="1">
            <widget class="QLabel" name="lblTorque_Max34">
+            <property name="text">
+             <string>---</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QLabel" name="lblN34">
             <property name="text">
              <string>---</string>
             </property>
@@ -607,6 +741,16 @@ qproperty-flashRate: 200;</string>
               <property name="text">
                <string>Старт</string>
               </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
               <property name="run_action" stdset="0">
                <bool>true</bool>
               </property>
@@ -620,6 +764,16 @@ qproperty-flashRate: 200;</string>
               <property name="text">
                <string>Пауза</string>
               </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/pause.png</normaloff>resources/pause.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
               <property name="pause_action" stdset="0">
                <bool>true</bool>
               </property>
@@ -632,6 +786,16 @@ qproperty-flashRate: 200;</string>
               </property>
               <property name="text">
                <string>Стоп</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
               </property>
               <property name="abort_action" stdset="0">
                <bool>true</bool>
@@ -790,23 +954,32 @@ qproperty-flashRate: 200;</string>
            </spacer>
           </item>
           <item row="2" column="0">
-           <widget class="QPushButton" name="pushButton_16">
+           <widget class="QPushButton" name="btnClearPlot34">
             <property name="text">
              <string>Очистить</string>
             </property>
            </widget>
           </item>
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="btnShowForse34">
             <property name="text">
-             <string>PushButton</string>
+             <string>Линейное усилие</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="btnShowTorque34">
             <property name="text">
-             <string>PushButton</string>
+             <string>Крутящий момент</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -925,143 +1098,30 @@ qproperty-flashRate: 200;</string>
             </property>
            </spacer>
           </item>
+          <item row="1" column="3">
+           <widget class="ActionButton" name="actionbutton">
+            <property name="text">
+             <string>Machine on</string>
+            </property>
+            <property name="indicator_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="indicator_status_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="is_estopped_status" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="estop_action" stdset="0">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
       </widget>
      </widget>
-    </item>
-    <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <widget class="ActionButton" name="actionbutton">
-        <property name="text">
-         <string>Тестовая
-кнопка
-Machine on</string>
-        </property>
-        <property name="indicator_option" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="indicator_status_option" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="is_estopped_status" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="estop_action" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive0">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_0</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="checked_state_text_option" stdset="0">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive1">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_1</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive2">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_2</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive3">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_3</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive4">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_4</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive5">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_5</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
     </item>
    </layout>
   </widget>
@@ -1120,13 +1180,64 @@ Machine on</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnSaveGCode34</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnSaveGCode34()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>394</x>
+     <y>575</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>5</x>
+     <y>584</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnClearPlot34</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnClearPlot34()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>715</x>
+     <y>850</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>717</x>
+     <y>886</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnShowResult34</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>pnBtnShowResult34()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>455</x>
+     <y>353</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>5</x>
+     <y>344</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
   <slot>onBtnTempShow33()</slot>
   <slot>onBtnTempShow32()</slot>
   <slot>onBtnTempShow31()</slot>
-  <slot>onBtnLoadGCode()</slot>
+  <slot>onBtnLoadGCode34()</slot>
   <slot>onBtnTestActive0(bool)</slot>
+  <slot>onBtnSaveGCode34()</slot>
+  <slot>pnBtnShowResult34()</slot>
+  <slot>onBtnClearPlot34()</slot>
  </slots>
 </ui>
