--- a/BallScrew.ui
+++ b/BallScrew.ui
@@ -301,7 +301,7 @@ qproperty-diameter: 20;
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page1">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -319,6 +319,9 @@ font: 15pt bold;</string>
           </property>
           <property name="text">
            <string>1. Выбор конфигурации</string>
+          </property>
+          <property name="margin">
+           <number>5</number>
           </property>
          </widget>
         </item>
@@ -566,6 +569,9 @@ font: 15pt bold;</string>
           <property name="text">
            <string>2.1 Настройка конфигурации</string>
           </property>
+          <property name="margin">
+           <number>5</number>
+          </property>
          </widget>
         </item>
         <item row="10" column="0">
@@ -623,7 +629,7 @@ font: 15pt bold;</string>
            <item row="1" column="0">
             <widget class="QLabel" name="label_48">
              <property name="text">
-              <string>Шаг ШВП, мм/об</string>
+              <string>Шаг ШВП, мм</string>
              </property>
             </widget>
            </item>
@@ -755,6 +761,9 @@ font: 15pt bold;</string>
           </property>
           <property name="text">
            <string>2.2 Настройка конфигурации</string>
+          </property>
+          <property name="margin">
+           <number>5</number>
           </property>
          </widget>
         </item>
@@ -940,6 +949,9 @@ font: 15pt bold;</string>
           <property name="text">
            <string>2.3 Настройка конфигурации</string>
           </property>
+          <property name="margin">
+           <number>5</number>
+          </property>
          </widget>
         </item>
        </layout>
@@ -1087,6 +1099,9 @@ font: 15pt bold;</string>
           </property>
           <property name="text">
            <string>2.4 Настройка конфигурации</string>
+          </property>
+          <property name="margin">
+           <number>5</number>
           </property>
          </widget>
         </item>
